--- a/Depo/Depo/Presentation/UserStories/Settings/Passcode/PasscodeSettings/View/PasscodeSettingsViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/Passcode/PasscodeSettings/View/PasscodeSettingsViewController.xib
@@ -67,6 +67,13 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jMc-IM-6FD" userLabel="Change Passcode View">
                             <rect key="frame" x="0.0" y="62" width="359" height="62"/>
                             <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sk6-nL-NpV">
+                                    <rect key="frame" x="8" y="61" width="343" height="1"/>
+                                    <color key="backgroundColor" name="separator"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="1" id="6au-3r-xWS"/>
+                                    </constraints>
+                                </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Change Passcode" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5gd-ty-uBV">
                                     <rect key="frame" x="15" y="21" width="137.5" height="20.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -85,8 +92,10 @@
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
+                                <constraint firstItem="Sk6-nL-NpV" firstAttribute="leading" secondItem="jMc-IM-6FD" secondAttribute="leading" constant="8" id="0nI-J1-FHW"/>
                                 <constraint firstAttribute="trailing" secondItem="uaD-uF-Kyt" secondAttribute="trailing" constant="19" id="BBK-ME-VOi"/>
                                 <constraint firstAttribute="height" constant="62" id="BTs-zU-vCL"/>
+                                <constraint firstAttribute="bottom" secondItem="Sk6-nL-NpV" secondAttribute="bottom" id="HQU-Pd-Vun"/>
                                 <constraint firstItem="kvZ-mU-80s" firstAttribute="top" secondItem="jMc-IM-6FD" secondAttribute="top" id="KGs-K4-UcM"/>
                                 <constraint firstAttribute="trailing" secondItem="kvZ-mU-80s" secondAttribute="trailing" id="L5d-S1-b9f"/>
                                 <constraint firstItem="5gd-ty-uBV" firstAttribute="leading" secondItem="jMc-IM-6FD" secondAttribute="leading" constant="15" id="XvY-eI-sWe"/>
@@ -94,6 +103,7 @@
                                 <constraint firstAttribute="bottom" secondItem="kvZ-mU-80s" secondAttribute="bottom" id="b66-1V-cNk"/>
                                 <constraint firstItem="uaD-uF-Kyt" firstAttribute="centerY" secondItem="jMc-IM-6FD" secondAttribute="centerY" id="m0K-xu-q1B"/>
                                 <constraint firstItem="kvZ-mU-80s" firstAttribute="leading" secondItem="jMc-IM-6FD" secondAttribute="leading" id="nZD-fZ-E9G"/>
+                                <constraint firstAttribute="trailing" secondItem="Sk6-nL-NpV" secondAttribute="trailing" constant="8" id="sMK-tA-rbE"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="52L-4V-mCz" userLabel="TouchID View">
@@ -214,7 +224,7 @@
                 <constraint firstAttribute="trailing" secondItem="H6p-r0-aNi" secondAttribute="trailing" constant="8" id="oxs-z3-LWt"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
-            <point key="canvasLocation" x="33.5" y="53.5"/>
+            <point key="canvasLocation" x="32.799999999999997" y="52.623688155922046"/>
         </view>
     </objects>
     <resources>
@@ -224,6 +234,9 @@
         </namedColor>
         <namedColor name="secondaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="separator">
+            <color red="0.92199999094009399" green="0.92500001192092896" blue="0.92500001192092896" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
