--- a/Depo/Depo/Presentation/UserStories/Settings/ChangePassword/ChangePasswordController.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ChangePassword/ChangePasswordController.xib
@@ -28,23 +28,23 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i3h-EH-0sJ">
                             <rect key="frame" x="0.0" y="0.0" width="329" height="470"/>
                             <subviews>
-                                <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="264" placeholderIntrinsicHeight="209" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="L8z-UI-Uaw">
-                                    <rect key="frame" x="28" y="20" width="273" height="209"/>
+                                <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="264" placeholderIntrinsicHeight="209" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="L8z-UI-Uaw">
+                                    <rect key="frame" x="16" y="24" width="297" height="209"/>
                                 </stackView>
                                 <view contentMode="scaleToFill" placeholderIntrinsicWidth="289" placeholderIntrinsicHeight="164.5" translatesAutoresizingMaskIntoConstraints="NO" id="b5P-p0-Y6m" customClass="CaptchaView" customModule="Billo" customModuleProvider="target">
-                                    <rect key="frame" x="28" y="237" width="273" height="164.5"/>
+                                    <rect key="frame" x="16" y="245" width="297" height="164.5"/>
                                     <color key="backgroundColor" name="primaryBackground"/>
                                 </view>
                             </subviews>
                             <color key="backgroundColor" name="primaryBackground"/>
                             <constraints>
-                                <constraint firstItem="L8z-UI-Uaw" firstAttribute="top" secondItem="i3h-EH-0sJ" secondAttribute="top" constant="20" id="0dP-oX-oFn"/>
-                                <constraint firstItem="b5P-p0-Y6m" firstAttribute="leading" secondItem="i3h-EH-0sJ" secondAttribute="leading" constant="28" id="BlJ-C5-PJG"/>
-                                <constraint firstItem="L8z-UI-Uaw" firstAttribute="leading" secondItem="i3h-EH-0sJ" secondAttribute="leading" constant="28" id="EGy-Qh-veX"/>
-                                <constraint firstItem="b5P-p0-Y6m" firstAttribute="top" secondItem="L8z-UI-Uaw" secondAttribute="bottom" constant="8" id="ix9-ss-RSe"/>
-                                <constraint firstAttribute="trailing" secondItem="b5P-p0-Y6m" secondAttribute="trailing" constant="28" id="nFR-1n-XWx"/>
+                                <constraint firstItem="L8z-UI-Uaw" firstAttribute="top" secondItem="i3h-EH-0sJ" secondAttribute="top" constant="24" id="0dP-oX-oFn"/>
+                                <constraint firstItem="b5P-p0-Y6m" firstAttribute="leading" secondItem="i3h-EH-0sJ" secondAttribute="leading" constant="16" id="BlJ-C5-PJG"/>
+                                <constraint firstItem="L8z-UI-Uaw" firstAttribute="leading" secondItem="i3h-EH-0sJ" secondAttribute="leading" constant="16" id="EGy-Qh-veX"/>
+                                <constraint firstItem="b5P-p0-Y6m" firstAttribute="top" secondItem="L8z-UI-Uaw" secondAttribute="bottom" constant="12" id="ix9-ss-RSe"/>
+                                <constraint firstAttribute="trailing" secondItem="b5P-p0-Y6m" secondAttribute="trailing" constant="16" id="nFR-1n-XWx"/>
                                 <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="b5P-p0-Y6m" secondAttribute="bottom" constant="16" id="vqO-aY-2mv"/>
-                                <constraint firstAttribute="trailing" secondItem="L8z-UI-Uaw" secondAttribute="trailing" constant="28" id="zBt-9d-m9i"/>
+                                <constraint firstAttribute="trailing" secondItem="L8z-UI-Uaw" secondAttribute="trailing" constant="16" id="zBt-9d-m9i"/>
                             </constraints>
                         </view>
                     </subviews>
