--- a/Depo/Depo/Presentation/UserStories/Others/TextEnter/TextEnterController.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/TextEnter/TextEnterController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -24,16 +24,16 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d5c-zP-tmo">
-                    <rect key="frame" x="20" y="20" width="335" height="20.5"/>
+                    <rect key="frame" x="16" y="12" width="343" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="oft-D5-eBu">
-                    <rect key="frame" x="20" y="60.5" width="335" height="60"/>
+                    <rect key="frame" x="16" y="59.5" width="343" height="60"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w6N-rX-U5n" customClass="ProfilePhoneEnterView" customModule="Billo" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="0.0" width="335" height="60"/>
+                            <rect key="frame" x="0.0" y="0.0" width="343" height="60"/>
                             <color key="backgroundColor" name="primaryBackground"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="60" id="kkk-dh-JZm"/>
@@ -41,8 +41,8 @@
                         </view>
                     </subviews>
                 </stackView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WZa-Y7-yKk" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
-                    <rect key="frame" x="75" y="150.5" width="225" height="44"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WZa-Y7-yKk" customClass="DarkBlueButton" customModule="Billo" customModuleProvider="target">
+                    <rect key="frame" x="28" y="159.5" width="319" height="44"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="yjQ-5Y-4Ms"/>
                     </constraints>
@@ -77,22 +77,23 @@
             <viewLayoutGuide key="safeArea" id="AX3-H7-wCy"/>
             <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
-                <constraint firstItem="WZa-Y7-yKk" firstAttribute="top" secondItem="oft-D5-eBu" secondAttribute="bottom" constant="30" id="26L-ck-JTV"/>
+                <constraint firstItem="WZa-Y7-yKk" firstAttribute="top" secondItem="oft-D5-eBu" secondAttribute="bottom" constant="40" id="26L-ck-JTV"/>
                 <constraint firstItem="AX3-H7-wCy" firstAttribute="bottom" secondItem="iSi-KE-raL" secondAttribute="bottom" constant="-261" id="F58-28-veO"/>
                 <constraint firstItem="Bpc-2K-Ib5" firstAttribute="leading" secondItem="AX3-H7-wCy" secondAttribute="leading" id="QdK-9F-QTL"/>
-                <constraint firstItem="WZa-Y7-yKk" firstAttribute="width" secondItem="6V6-VG-ZMj" secondAttribute="width" multiplier="0.6" id="RPv-hN-hwI"/>
-                <constraint firstItem="oft-D5-eBu" firstAttribute="leading" secondItem="AX3-H7-wCy" secondAttribute="leading" constant="20" id="SCd-x5-Ubw"/>
-                <constraint firstItem="oft-D5-eBu" firstAttribute="top" secondItem="d5c-zP-tmo" secondAttribute="bottom" constant="20" id="W6p-BM-O8A"/>
-                <constraint firstItem="d5c-zP-tmo" firstAttribute="leading" secondItem="6V6-VG-ZMj" secondAttribute="leading" constant="20" id="ZSb-0c-Dnu"/>
+                <constraint firstItem="oft-D5-eBu" firstAttribute="leading" secondItem="AX3-H7-wCy" secondAttribute="leading" constant="16" id="SCd-x5-Ubw"/>
+                <constraint firstItem="oft-D5-eBu" firstAttribute="top" secondItem="d5c-zP-tmo" secondAttribute="bottom" constant="27" id="W6p-BM-O8A"/>
+                <constraint firstItem="AX3-H7-wCy" firstAttribute="trailing" secondItem="WZa-Y7-yKk" secondAttribute="trailing" constant="28" id="Z7t-wc-Qbp"/>
+                <constraint firstItem="d5c-zP-tmo" firstAttribute="leading" secondItem="6V6-VG-ZMj" secondAttribute="leading" constant="16" id="ZSb-0c-Dnu"/>
                 <constraint firstItem="iSi-KE-raL" firstAttribute="top" secondItem="Bpc-2K-Ib5" secondAttribute="bottom" id="aHT-1i-1r0"/>
                 <constraint firstAttribute="trailing" secondItem="iSi-KE-raL" secondAttribute="trailing" id="ahZ-ul-isa"/>
-                <constraint firstAttribute="trailing" secondItem="d5c-zP-tmo" secondAttribute="trailing" constant="20" id="ffA-KP-pPa"/>
+                <constraint firstItem="WZa-Y7-yKk" firstAttribute="leading" secondItem="AX3-H7-wCy" secondAttribute="leading" constant="28" id="dRM-A2-QsY"/>
+                <constraint firstAttribute="trailing" secondItem="d5c-zP-tmo" secondAttribute="trailing" constant="16" id="ffA-KP-pPa"/>
                 <constraint firstItem="WZa-Y7-yKk" firstAttribute="centerX" secondItem="6V6-VG-ZMj" secondAttribute="centerX" id="gwR-R2-WHc"/>
                 <constraint firstItem="Bpc-2K-Ib5" firstAttribute="top" secondItem="AX3-H7-wCy" secondAttribute="top" id="hMY-wA-RDH"/>
                 <constraint firstItem="iSi-KE-raL" firstAttribute="leading" secondItem="6V6-VG-ZMj" secondAttribute="leading" id="mHN-ni-CC7"/>
-                <constraint firstItem="d5c-zP-tmo" firstAttribute="top" secondItem="6V6-VG-ZMj" secondAttribute="top" constant="20" id="oG9-08-FVp"/>
+                <constraint firstItem="d5c-zP-tmo" firstAttribute="top" secondItem="6V6-VG-ZMj" secondAttribute="top" constant="12" id="oG9-08-FVp"/>
                 <constraint firstItem="Bpc-2K-Ib5" firstAttribute="trailing" secondItem="AX3-H7-wCy" secondAttribute="trailing" id="sLG-zH-ZrF"/>
-                <constraint firstItem="AX3-H7-wCy" firstAttribute="trailing" secondItem="oft-D5-eBu" secondAttribute="trailing" constant="20" id="yTY-Ws-Qhg"/>
+                <constraint firstItem="AX3-H7-wCy" firstAttribute="trailing" secondItem="oft-D5-eBu" secondAttribute="trailing" constant="16" id="yTY-Ws-Qhg"/>
             </constraints>
             <point key="canvasLocation" x="24.800000000000001" y="50.824587706146929"/>
         </view>
